# online-debate

./: .gitignore  LICENSE.md  README.md  config-dkoshien.yaml.sample  config-jda.yaml.sample  config.yaml.sample  manage.py  pyproject.toml  requirements.txt  worksheet.py  zoom-key.yaml.sample  zoom-setting.yaml  zoom.py
docs/: get-scripts.md  google-api.md  how-to-use.md  install-python.md  zoom-api.md  zoom-create-user.md
online_debate/: requirements.txt  worksheet.py
