[tool.poetry]
name = "online-debate"
version = "0.1.0"
description = ""
authors = ["Daisuke Koyama"]
readme = "README.md"
packages = [{include = "online_debate"}]

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = ">=6.0"
gspread = ">=5.7.2"
pydrive = ">=1.3.1"
colorama = ">=0.4.6"
requests = ">=2.28.2"


[tool.poetry.group.dev.dependencies]
sphinx = ">=5.3.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
